--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Datasource
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/dbsysweb
+spring.datasource.url = jdbc:mysql://localhost:3306/dbsystagram
 spring.datasource.username = root
 spring.datasource.password = skyinfo
 # JPA
