--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,15 @@
 			<artifactId>cglib</artifactId>
 			<version>3.1</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk -->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.522</version>
+		</dependency>
+		
+		
 	</dependencies>
 	
 	<build>
