--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#https://docs.spring.io/spring-boot/docs/1.5.x/reference/html/common-application-properties.html
 # Datasource
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/dbsysweb
@@ -13,6 +14,8 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=file:./src/main/resources/templates/
 # Session
 spring.session.store-type=none
+server.session.tracking-modes=cookie
+server.session.timeout=300
 # File multipart
 spring.http.multipart.max-file-size=15MB
 spring.http.multipart.max-request-size=15MB
