--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=file:./src/main/resources/templates/
 # Session
 spring.session.store-type=none
+server.session.tracking-modes=cookie
+ server.session.timeout=300
 # File multipart
 spring.http.multipart.max-file-size=15MB
 spring.http.multipart.max-request-size=15MB
