--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.http.multipart.max-request-size=15MB
 # Cookies
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
+# Ports
+server.port=80
+# Forward headers
+#server.use-forward-headers=true
+server.tomcat.remote_ip_header=x-forwarded-for
+server.tomcat.protocol_header=x-forwarded-proto
