--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
 			<artifactId>cglib</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.thymeleaf.extras</groupId>
+    		<artifactId>thymeleaf-extras-springsecurity4</artifactId>
+		</dependency>
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<build>
