Foi criado um novo pacote domain para agrupar as classes dos pacotes model e repository.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.http.multipart.max-request-size=15MB
 # Cookies
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=true
+# Spring configuration
+#server.context-path=/systagram
