--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+				<dependency>
+			<groupId>com.tngtech.archunit</groupId>
+			<artifactId>archunit</artifactId>
+			<version>0.14.1</version>
+			<scope>test</scope>
+		</dependency>
 		
 	</dependencies>
 	
